@@ -6,6 +6,7 @@
 #    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
 #    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.
 
+* aozeritsky: Добавлены новые поля в TUser, обновляться через снапшот.
 * aozeritsky: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
 * aozeritsky: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
 * renadeen: Обновить архив операций до версии 27.
